# smart-lite-insight

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dockerignore  pyproject.toml  pyproject_old.toml
.github/workflows/: ci.yml
compose/: .env
dashboard/: app.py  chat.py
deploy/: install-service.sh  smartlite.service
docs/schemas/: telemetry_v1.json
models/: registry.json
notebooks/: 00_data_exploration.ipynb  01_feature_engineering.ipynb
seed/: replayer.py
smart_lite_insight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: agent.py  detect.py  features.py  ingest.py  serve.py  train.py  validate.py
src/smart_lite_insight.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_features.py  test_ingest.py  test_ingest_bulk.py  test_replayer.py  test_serve.py  test_serve_extended.py  test_smoke.py  test_train.py  test_validate.py
