[project]
name = "smart-lite-insight"
version = "0.1.0"
description = "Edge-AI Energy Monitoring and Anomaly Detection on Raspberry Pi 5"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Tolu"}]
readme = "README.md"

dependencies = [
    # ── Data Engineering ──
    "pandas>=2.2,<3",
    "numpy>=1.26",

    # ── Database ──
    # sqlite3 is stdlib — no install needed

    # ── Scheduling ──
    "apscheduler>=3.10,<4",

    # ── ML / Anomaly Detection ──
    "scikit-learn>=1.4,<2",
    "joblib>=1.3",

    # ── API ──
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",

    # ── Dashboard ──
    "streamlit>=1.35,<2",
    "plotly>=5.22,<6",

    # ── Utilities ──
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "black>=24.4",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "notebook>=7.1",
    "pre-commit>=3.7",
]

# ── Build System ──
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "seed*"]

# ── Black (formatter) ──
[tool.black]
line-length = 88
target-version = ["py311"]

# ── Ruff (linter) ──
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length handled by black
    "B008",   # FastAPI Query()/Depends() in function defaults is intentional
]

[tool.ruff.lint.isort]
known-first-party = ["src", "seed"]

# ── Pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
